--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                <a href="dicee.html"> <img src="blog-2.jpg" alt=""></a>
             </div>
             <div class="portfolio-img">
-                <a href="https://rajatkamra942.github.io/ShopDogS/">  <img src="blog-3.jpg" alt=""></a>
+                <a href="https://rajatkamra942.github.io/ShopdogS/">  <img src="blog-3.jpg" alt=""></a>
             </div>
             <div class="portfolio-img">
                 <a href="drum.html"> <img src="blog-4.jpg" alt=""></a>
