--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="home-text">
             <span>Hello, I'm</span>
             <h1>Rajat Arora</h1>
-            <h2>Frontend Developer</h2>
-            <p>My name is <strong>Rajat</strong>. Born & brought up in jind Haryana. I love to explore new places. Making of codes is a satisfaction for me. This website is using <strong> HTML,CSS & JAVASCRIPT</strong> coding only. </p>
+            <h2>Beginner programer</h2>
+            <p>My name is <strong>Rajat</strong>. Born & brought up in jind Haryana. I love to explore new places. Making of codes is a satisfaction for me. This website is using<strong>HTML,CSS & JAVASCRIPT</strong> coding only. </p>
             <a href="#contact" class="btn"> <i class='bx bx-smile'></i> Contact Me</a>
         </div>
  
@@ -61,7 +61,7 @@
                 <img src="121.jpg" alt="">
             </div>
             <div class="about-text">
-                <p>Hello Guys.. My name is <strong>Rajat Arora</strong> . im 26 yrs old. born & brought up in jind haryana. Im <strong>BSC</strong> Graduated from Maharishi dayanand university Rohtak. Im learning Frontend devlopment from 2021. During the pandamic im learning from udemy ottcamps & Self study sources. i have learn  <Strong>HTML, CSS, JAVASCRIPT, REACT</Strong>. i love todo code now. I have make servals project also.  </p>
+                <p>Hello Guys.. My name is <strong>Rajat Arora</strong> . im 26 yrs old. born & brought up in jind haryana. Im<strong>BSC</strong> Graduated from Maharishi dayanand university Rohtak. Im learning Frontend devlopment from 2021. During the pandamic i start learning codes from udemy bootcamps & Self study sources. i have learn  <Strong>HTML, CSS, JAVASCRIPT, REACT</Strong>. i love todo code now. I have make servals project also.  </p>
                 <div class="information">
                     <!-- Box 1 -->
                     <div class="info-box">
