--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
     <div class="footer">
         <h2>My Social Media Handels. </h2>
         <div class="footer-social">
+            <a href="https://github.com/rajatkamra942"><i class='bx bxl-github'></i></a>
+
             <a href="https://www.facebook.com/rajatkamra942"><i class='bx bxl-facebook' ></i></a>
             <a href="https://www.twitter.com/thekamra96"><i class='bx bxl-twitter' ></i></a>
             <a href="https://www.instagram.com/im_rk_47"><i class='bx bxl-instagram' ></i></a>
